# grpcpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build_and_push_container.sh  entrypoint.sh  grpcpp.sh
.github/workflows/: build-ubuntu.yml
examples/dirs/: dirs.cc  foo.txt
examples/flags/: flags.cc
examples/hw/: hw.cc
examples/perftest/: sync.sh
examples/perftest/stream/: DockerfilePerftest  docker-compose.yml
examples/perftest/stream/client/: client.cc
examples/perftest/stream/perftest/: perftest.cc
examples/perftest/stream/server/: server.cc
examples/perftest/sync/: DockerfilePerftest  docker-compose.yml  run_locally.sh
examples/perftest/sync_perftest/: perftest.cc  schema.proto
examples/perftest/sync_server/: service.cc
examples/perftest/unary/: DockerfileServer  run_locally.sh
examples/perftest/unary/perftest/: perftest.cc
examples/perftest/unary/server/: service.cc
examples/service_mul/: service_mul.cc  service_mul.proto
examples/test_add/: test_add.cc
lib/: grpc_perftest.h  grpc_perftest_main.h
subdir/with spaces/: foo.txt
